knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Directors_and_Officer__c/Corporate_Entity_Directors_and_Officer__c.object-meta.xml
<CustomObject>
    <label>Corporate Entity - Directors and Officer</label>
    <nameField>
        <displayFormat>CE(A)-{000000}</displayFormat>
        <label>Director/Officer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Entity - Directors and Officer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>