knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Directors_and_Officer__c/fields/Appt_Election_Date__c.field-meta.xml
<CustomField>
    <fullName>Appt_Election_Date__c</fullName>
    <label>Appt/Election Date</label>
    <type>Date</type>
</CustomField>