knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Directors_and_Officer__c/fields/Corporate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Entity__c</fullName>
    <label>Account (Corporate Entity)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Entity - Directors and Officer (Account (Corporate Entity))</relationshipLabel>
    <relationshipName>Corporate_Entity_Directors_and_Officer1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>