knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Directors_and_Officer__c/fields/Managing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Managing_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Entity - Directors and Officer</relationshipLabel>
    <relationshipName>Corporate_Entity_Directors_and_Officer</relationshipName>
    <type>Lookup</type>
</CustomField>