knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Directors_and_Officer__c/fields/Resign_Date__c.field-meta.xml
<CustomField>
    <fullName>Resign_Date__c</fullName>
    <label>Resign Date</label>
    <type>Date</type>
</CustomField>