knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Directors_and_Officer__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistant Controller</fullName>
            </value>
            <value>
                <fullName>Assistant Secretary</fullName>
            </value>
            <value>
                <fullName>Assoc. Regional Vice President</fullName>
            </value>
            <value>
                <fullName>Authorized Rep</fullName>
            </value>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Chief Accounting Officer</fullName>
            </value>
            <value>
                <fullName>Chief Adminstrative Officer</fullName>
            </value>
            <value>
                <fullName>Chief Business Development Officer</fullName>
            </value>
            <value>
                <fullName>Chief Compliance Officer</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer</fullName>
            </value>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Chief Information Officer</fullName>
            </value>
            <value>
                <fullName>Chief Medical Officer</fullName>
            </value>
            <value>
                <fullName>Chief of Clinical Operations</fullName>
            </value>
            <value>
                <fullName>Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>Chief Risk Officer</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Corporate Secretary</fullName>
            </value>
            <value>
                <fullName>Division Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>Division President</fullName>
            </value>
            <value>
                <fullName>Duly Authorized Signatory</fullName>
            </value>
            <value>
                <fullName>General Counsel</fullName>
            </value>
            <value>
                <fullName>Internal Counsel</fullName>
            </value>
            <value>
                <fullName>Managing Partner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Regional Vice President</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>