knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Directors_and_Officer__c/recordTypes/Corporate_Entity_Directors_and_Officer.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Entity_Directors_and_Officer</fullName>
    <active>true</active>
    <label>Corporate Entity - Directors and Officer</label>
</RecordType>